--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "start-with-api": "concurrently --raw \"ng serve --proxy-config proxy-conf.json\" \"json-server --port 4201 db.json\"",
+    "start-angular": "ng serve --proxy-config proxy-conf.json",
+    "start-api": "node rest-server-js/src/server",
+    "start-with-api": "concurrently --raw \"npm run start-angular\" \"npm run start-api\"",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -35,6 +37,8 @@
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
     "concurrently": "^3.6.1",
+    "dyson": "^2.0.1",
+    "dyson-generators": "^0.2.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "json-server": "^0.14.0",
@@ -46,6 +50,13 @@
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "typescript": "~2.7.2",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "jest": "^23.5.0",
+    "lowdb": "^1.0.0",
+    "sqlite3": "^4.0.2",
+    "supertest": "^3.1.0"
+
   }
 }
